--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,6 @@ add_executable(task-auriga-1
   algo6.cpp
   algo7-sort.cpp
   algo8-binary.cpp
+  algo9.cpp
 )
 target_compile_features(task-auriga-1 PRIVATE cxx_std_23)
