--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,6 @@ add_executable(task-auriga-1
   algo7-sort.cpp
   algo8-binary.cpp
   algo9.cpp
+  algo10.cpp
 )
 target_compile_features(task-auriga-1 PRIVATE cxx_std_23)
